<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg"
                tools:context=".MainActivity">
    <RelativeLayout
            android:id="@+id/registration_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background">
        <Button android:id="@+id/refuse"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:background="@drawable/ic_refuse"
                android:onClick="onClick"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"/>/>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
            <TextView
                    android:id="@+id/registration_label"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/registration_label"/>
            <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="200dp"
                    android:backgroundTint="@color/blue_500"
                    android:inputType="textEmailAddress"
                    android:layout_below="@+id/registration_label"/>
            <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="200dp"
                    android:backgroundTint="@color/blue_500"
                    android:inputType="textPassword"
                    android:layout_below="@+id/input_email"/>
            <Button
                    android:id="@+id/send_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="200dp"
                    android:layout_below="@+id/input_password"
                    android:onClick="onClick"
                    android:text="@string/send_form"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/main_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
        <RelativeLayout
                android:id="@+id/result_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp">
            <TextView
                    android:id="@+id/result_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:text="@string/current_best_result_label"/>
            <TextView
                    android:id="@+id/result_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:layout_toRightOf="@+id/result_label"
                    android:text="@string/result_value"/>
        </RelativeLayout>
        <Button
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="200dp"
                android:layout_below="@+id/result_wrapper"
                android:onClick="onClick"
                android:text="@string/start"/>
        <Button
            android:id="@+id/authentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="200dp"
            android:onClick="onClick"
            android:layout_below="@+id/start"/>
        <Button
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="200dp"
                android:layout_below="@+id/authentication"
                android:onClick="onClick"
                android:text="@string/about"/>
        <Button
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="200dp"
                android:layout_below="@+id/about"
                android:onClick="onClick"
                android:text="@string/exit"/>
    </RelativeLayout>
</RelativeLayout>