<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/general_wrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".StartActivity"
                android:background="@drawable/bg">
    <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:weightSum="10">
        <RelativeLayout
                android:id="@+id/game_wrapper"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"/>
        <RelativeLayout
                android:id="@+id/indicator_wrapper"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
    </LinearLayout>

    <TextView
            android:id="@+id/current_result"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="40sp"
            android:layout_alignParentEnd="true" android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" android:layout_marginBottom="10dp"
            android:text="0"/>
    <Button
            android:id="@+id/back_from_start"
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:background="@drawable/ic_back_arrow"
            android:onClick="onClick"
            android:layout_alignParentStart="true"
            tools:ignore="SpeakableTextPresentCheck"
            android:layout_marginTop="10dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>

    <GridLayout
            android:id="@+id/game_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="1"
            android:columnCount="2"
            android:layout_below="@+id/current_result">
        <Button
                android:id="@+id/to_left"
                android:layout_columnWeight="0.5"
                android:layout_rowWeight="1"
                android:background="@android:color/transparent"
                android:onClick="onClick"/>
        <Button
                android:id="@+id/to_right"
                android:layout_columnWeight="0.5"
                android:layout_rowWeight="1"
                android:background="@android:color/transparent"
                android:onClick="onClick"/>
    </GridLayout>

    <RelativeLayout
            android:id="@+id/pause_state"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_marginBottom="10dp"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:layout_above="@+id/continue_game"
                android:text="@string/confirm"/>
        <Button
                android:id="@+id/continue_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="200dp"
                android:layout_centerInParent="true"
                android:text="@string/continue_game"
                android:onClick="onClick"/>
        <Button
                android:id="@+id/back_from_pause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="200dp"
                android:layout_centerInParent="true"
                android:layout_below="@+id/continue_game"
                android:text="@string/exit"
                android:onClick="onClick"/>
    </RelativeLayout>
</RelativeLayout>